AArch64: NMT detail stack trace cleanup

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 10
    • Affects Version/s: 9
    • Component/s: hotspot
    • b33
    • aarch64

        The changes for 8133749, 8133747, and 8133740 may need some additional
        work for the linux-aarch port. Please have a look at the review thread,
        especially the comments near the end.

        http://mail.openjdk.java.net/pipermail/hotspot-runtime-dev/2016-August/020535.html

              Assignee:
              Dmitriy Samersoff
              Reporter:
              Andrew Haley
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: