8163011: AArch64: NMT detail stack trace cleanup

Makes aarch64 behavior similar to x86 one

Reviewed-by: aph, drwhite